<resources>
    <string name="app_name">Save Money</string>
    <string name="forward"><![CDATA[-->]]></string>
    <string name="back"><![CDATA[<--]]></string>
    <string name="selected_date">Fecha seleccionada %1$s %2$s</string>
    <string name="sunday">Dom</string>
    <string name="monday">Lun</string>
    <string name="tuesday">Mar</string>
    <string name="wednesday">Mié</string>
    <string name="thursday">Jue</string>
    <string name="friday">Vie</string>
    <string name="saturday">Sáb</string>
    <string name="title_activity_home_main">Home_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Transacciones</string>
    <string name="menu_gallery">Cuentas</string>
    <string name="menu_slideshow">Cerrar Session</string>
</resources>